# Wydra-construcaoSoftware

./: .gitignore  package-lock.json  package.json
bancoUsuario/: schema.sql
client/: index.html  package 2.json  package-lock.json
client/services/: api.js
client/src/: App.vue
db/: Wydra.db  schema.sql
server/: README.md  app.js  auth  main.py  package-lock.json  package.json  pyproject.toml
server/api/: __init__.py  avaliacao.py  estante.py  obra.py  user.py  usuario.py
server/app/controllers/: __init__.py  auth.py  avaliacao.py  estante.py  obra.py  usuario.py
server/app/models/: __init__.py  avaliacao.py  estante.py  models.py  usuario.py
server/app/schemas/: __init__.py  avaliacao.py  estante.py  obra.py  usuario.py
server/controller/: __init__.py  estante.py  movie.py  user.py
server/core/: __init__.py  config.py
server/core/database/: __init__.py
server/core/exceptions/: __init__.py  base.py
server/core/models/: estante.py  usuario.py
server/core/security/: __init__.py  jwt.py  password.py
server/dal/: Wydra.db  __init__.py  orm.py  schema.sql  user.py
server/domain/: __init__.py  schemas.py  user.py
server/model/: __init__.py  database.db  orm.py  schema.py  schema.sql  schemaEstante.py  schemas.py  tabelas.py  teste.py  user.py
server/repositories/: user.py
server/repositories/db/: __init__.py  models.py  schemas.py
server/routers/: __init__.py  estante.py  movie.py  user.py
server/routes/: index.js  users.js
server/services/: database.js  database.py  estante.py  user.py
server/test/: jwt_test.py  obra_test.py
(+19 files in other folders)
